--- a/src/main/resources/views/negative_view.fxml
+++ b/src/main/resources/views/negative_view.fxml
@@ -2,7 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.app.Controllers.GammaController">
+<GridPane alignment="BOTTOM_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fx.app.Controllers.NegativeController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="548.0" minWidth="10.0" prefWidth="528.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="72.0" />
@@ -25,19 +26,29 @@
             <ImageView fx:id="imageViewGamma" fitHeight="319.0" fitWidth="497.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </HBox>
-      <Slider majorTickUnit="1.0" max="10.0" minorTickCount="5" prefHeight="38.0" prefWidth="510.0" showTickLabels="true" showTickMarks="true" GridPane.rowIndex="1">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <padding>
-            <Insets left="50.0" right="50.0" />
-         </padding>
-      </Slider>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
             <Button layoutY="14.0" mnemonicParsing="false" text="SAVE" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="14.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+      <MenuButton mnemonicParsing="false" text="Make negative from:" GridPane.rowIndex="1">
+        <items>
+          <MenuItem mnemonicParsing="false" text="red" />
+          <MenuItem mnemonicParsing="false" text="green" />
+            <MenuItem mnemonicParsing="false" text="blue" />
+            <MenuItem mnemonicParsing="false" text="red and green" />
+            <MenuItem mnemonicParsing="false" text="red and blue" />
+            <MenuItem mnemonicParsing="false" text="blue and green" />
+        </items>
+         <GridPane.margin>
+            <Insets left="220.0" />
+         </GridPane.margin>
+      </MenuButton>
+      <Button mnemonicParsing="false" text="Standard negative (all channels)" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="20.0" />
+         </GridPane.margin>
+      </Button>
    </children>
 </GridPane>
