--- a/src/main/resources/views/start_view.fxml
+++ b/src/main/resources/views/start_view.fxml
@@ -79,12 +79,12 @@
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
-                  <Button fx:id="histogramBtn" disable="true" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" prefWidth="86.0" text="Histogram Based Operations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="histogramBtn" disable="true" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" prefWidth="86.0" text="Histogram Based Operations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" onAction="#openHistogramWindow"/>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
-                  <Button fx:id="geometricBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" text="Geometric Transformations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="geometricBtn" disable="true" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" text="Geometric Transformations" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" onAction="#openGeometricWindow"/>
                </children>
             </AnchorPane>
          </children>
