--- a/src/main/resources/views/negative_view.fxml
+++ b/src/main/resources/views/negative_view.fxml
@@ -28,7 +28,7 @@
       </HBox>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button layoutY="14.0" mnemonicParsing="false" text="SAVE" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="14.0" />
+            <Button layoutY="21.0" mnemonicParsing="false" text="SAVE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="21.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
@@ -45,9 +45,14 @@
             <Insets left="220.0" />
          </GridPane.margin>
       </MenuButton>
-      <Button fx:id="standNegBtn" mnemonicParsing="false" text="Standard negative (all channels)" GridPane.rowIndex="1" onAction="#negative">
+      <Button fx:id="standNegBtn" mnemonicParsing="false" onAction="#negative" text="Standard negative (all channels)" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="20.0" />
+         </GridPane.margin>
+      </Button>
+      <Button mnemonicParsing="false" text="Revert" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="380.0" />
          </GridPane.margin>
       </Button>
    </children>
