--- a/src/main/resources/views/black_and_white_view.fxml
+++ b/src/main/resources/views/black_and_white_view.fxml
@@ -35,7 +35,7 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </Button>
-      <Button mnemonicParsing="false" text="Revert" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" text="Revert" onAction="#undoActionForBlackWhiteController" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="180.0" />
          </GridPane.margin>
