--- a/src/main/resources/views/histogram_view.fxml
+++ b/src/main/resources/views/histogram_view.fxml
@@ -44,7 +44,7 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </MenuButton>
-      <Button mnemonicParsing="false" text="Revert" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" text="Revert" onAction="#undoActionForHistogramController" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="180.0" />
          </GridPane.margin>
