--- a/src/main/resources/views/negative_view.fxml
+++ b/src/main/resources/views/negative_view.fxml
@@ -50,7 +50,7 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </Button>
-      <Button mnemonicParsing="false" text="Revert" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" text="Revert" onAction="#undoActionForNegativeeController" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="380.0" />
          </GridPane.margin>
