--- a/src/main/resources/views/start_view.fxml
+++ b/src/main/resources/views/start_view.fxml
@@ -31,7 +31,7 @@
                 </Menu>
             <Menu mnemonicParsing="false" text="Edit">
               <items>
-                  <MenuItem mnemonicParsing="false" text="Undo" />
+                  <MenuItem mnemonicParsing="false" onAction="#undoActionForOpenFileController" text="Undo" />
               </items>
             </Menu>
                 <Menu id="helpMenuBar" mnemonicParsing="false" text="Help">
