--- a/src/main/resources/views/gamma_view.fxml
+++ b/src/main/resources/views/gamma_view.fxml
@@ -35,7 +35,7 @@
       </Slider>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button layoutY="14.0" mnemonicParsing="false" text="SAVE" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="14.0" />
+            <Button layoutY="14.0" mnemonicParsing="false" text="SAVE" onAction="#saveActionForGammaController" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="14.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
