buttons Greysclae black and white connected to controllers processing functions

--- a/src/main/resources/views/geometric_view.fxml
+++ b/src/main/resources/views/geometric_view.fxml
@@ -34,7 +34,7 @@
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
          <children>
-            <Slider layoutY="48.0" max="360.0" orientation="VERTICAL" prefHeight="286.0" prefWidth="72.0" showTickLabels="true" showTickMarks="true" />
+            <Slider layoutY="48.0" max="360.0" orientation="VERTICAL" prefHeight="286.0" prefWidth="72.0" showTickLabels="true" showTickMarks="true" onDragDetected="#rotate"/>
             <Text layoutX="11.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rotation" wrappingWidth="49.13671910762787" />
          </children></AnchorPane>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Width" wrappingWidth="49.13671875" GridPane.rowIndex="1">
