Histogram -> stretch operation added

--- a/src/main/resources/views/histogram_view.fxml
+++ b/src/main/resources/views/histogram_view.fxml
@@ -35,7 +35,7 @@
       <MenuButton mnemonicParsing="false" text="Histogram operation" GridPane.rowIndex="1">
         <items>
             <MenuItem mnemonicParsing="false" text="Equalization" onAction="#equalization"/>
-          <MenuItem mnemonicParsing="false" text="Stretch" />
+          <MenuItem mnemonicParsing="false" text="Stretch" onAction="#stretch" />
         </items>
          <opaqueInsets>
             <Insets />
