--- a/src/main/resources/views/geometric_view.fxml
+++ b/src/main/resources/views/geometric_view.fxml
@@ -57,7 +57,7 @@
             <Insets left="310.0" />
          </GridPane.margin>
       </Text>
-      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Scaling (Resizing)" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="139.0" text="Scaling (Resizing)" GridPane.rowIndex="1" onAction="#scale">
          <GridPane.margin>
             <Insets left="20.0" />
          </GridPane.margin>
