--- a/src/main/resources/views/filtering_view.fxml
+++ b/src/main/resources/views/filtering_view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -28,14 +29,14 @@
       </HBox>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button layoutY="21.0" mnemonicParsing="false" text="SAVE" onAction="#saveActionForFilteringController" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="21.0" />
+            <Button layoutY="21.0" mnemonicParsing="false" onAction="#saveActionForFilteringController" text="SAVE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="21.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
       <MenuButton mnemonicParsing="false" text="Filter" GridPane.rowIndex="1">
         <items>
             <MenuItem mnemonicParsing="false" text="High-pass filter" />
-          <MenuItem mnemonicParsing="false" text="Gaussian filter" onAction="#gaussianFilter" />
+          <MenuItem mnemonicParsing="false" onAction="#setSigmaSliderVisible" text="Gaussian filter" />
           <MenuItem mnemonicParsing="false" text="Mean filter" />
             <MenuItem mnemonicParsing="false" text="Laplacian filter" />
             <MenuItem mnemonicParsing="false" text="Low-pass filter" />
@@ -47,10 +48,15 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </MenuButton>
-      <Button mnemonicParsing="false" text="Revert" onAction="#undoActionForFilterController" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" onAction="#undoActionForFilterController" text="Revert" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="100.0" />
          </GridPane.margin>
       </Button>
+      <Slider fx:id="sigmaSlider" blockIncrement="1.0" majorTickUnit="1.0" max="10.0" minorTickCount="5" prefHeight="38.0" prefWidth="407.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" visible="false" GridPane.rowIndex="1" onMouseClicked="#gaussianFilter">
+         <GridPane.margin>
+            <Insets left="170.0" right="20.0" />
+         </GridPane.margin>
+      </Slider>
    </children>
 </GridPane>
