--- a/src/main/resources/views/gamma_view.fxml
+++ b/src/main/resources/views/gamma_view.fxml
@@ -25,19 +25,27 @@
             <ImageView fx:id="imageViewGamma" fitHeight="319.0" fitWidth="497.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </HBox>
-      <Slider fx:id="gammaCorrectionSlider" majorTickUnit="1.0" value="1.0" onMouseClicked="#gammaCorrection" max="10.0" minorTickCount="5" prefHeight="38.0" prefWidth="510.0" showTickLabels="true" showTickMarks="true" GridPane.rowIndex="1">
+      <Slider fx:id="gammaCorrectionSlider" majorTickUnit="1.0" max="10.0" minorTickCount="5" onMouseClicked="#gammaCorrection" prefHeight="38.0" prefWidth="510.0" showTickLabels="true" showTickMarks="true" value="1.0" GridPane.rowIndex="1">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <padding>
             <Insets left="50.0" right="50.0" />
          </padding>
+         <GridPane.margin>
+            <Insets right="50.0" />
+         </GridPane.margin>
       </Slider>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button layoutY="14.0" mnemonicParsing="false" text="SAVE" onAction="#saveActionForGammaController" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="14.0" />
+            <Button layoutY="21.0" mnemonicParsing="false" onAction="#saveActionForGammaController" text="SAVE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="21.0" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+      <Button mnemonicParsing="false" text="Revert" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="450.0" />
+         </GridPane.margin>
+      </Button>
    </children>
 </GridPane>
