--- a/src/main/resources/views/geometric_view.fxml
+++ b/src/main/resources/views/geometric_view.fxml
@@ -62,7 +62,7 @@
             <Insets left="20.0" />
          </GridPane.margin>
       </Button>
-      <Button mnemonicParsing="false" text="Revert" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" text="Revert" onAction="#undoActionForGeometricController" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="450.0" />
          </GridPane.margin>
