about app added

--- a/src/main/resources/views/start_view.fxml
+++ b/src/main/resources/views/start_view.fxml
@@ -36,7 +36,7 @@
             </Menu>
                 <Menu id="helpMenuBar" mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem id="aboutItem" mnemonicParsing="false" text="About" />
+                        <MenuItem id="aboutItem" mnemonicParsing="false" text="About" onAction="#handleOpenAbout"/>
                     </items>
                 </Menu>
             </menus>
