filter method connected with views

--- a/src/main/resources/views/filtering_view.fxml
+++ b/src/main/resources/views/filtering_view.fxml
@@ -35,10 +35,10 @@
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
       <MenuButton mnemonicParsing="false" text="Filter" GridPane.rowIndex="1">
         <items>
-            <MenuItem mnemonicParsing="false" onAction="#setAllSlidersInvisible" text="Sharpen filter" />
+            <MenuItem mnemonicParsing="false" onAction="#sharpen" text="Sharpen filter" />
           <MenuItem mnemonicParsing="false" onAction="#setSigmaSliderVisible" text="Gaussian filter" />
-          <MenuItem mnemonicParsing="false" onAction="#setAllSlidersInvisible" text="Smooth filter" />
-            <MenuItem mnemonicParsing="false" onAction="#setAllSlidersInvisible" text="Laplacian filter" />
+          <MenuItem mnemonicParsing="false" onAction="#smooth" text="Smooth filter" />
+            <MenuItem mnemonicParsing="false" onAction="#laplacianFilter" text="Laplacian filter" />
             <MenuItem mnemonicParsing="false" onAction="#setNoiseSliderVisible" text="Noise filter" />
         </items>
          <opaqueInsets>
